API method for view proposition.
