# src/route/index.js
@@ -15,6 +15,7 @@ module.exports = [
   _.post('/api/deal/:dealId/accept', authenticate(require('./api/deal/accept'))),
   _.get('/api/deal', authenticate(require('./api/deal/list'))),
   _.get('/api/deal/:dealId/access', authenticate(require('./api/deal/access'))),
+  _.get('/api/deal/:dealId', authenticate(require('./api/deal/view'))),
 
   // deal activity
   _.post('/api/deal/:dealId/activity', authenticate(require('./api/deal/activity/create'))),
